[gd_scene load_steps=32 format=2]

[ext_resource path="res://src/CatVideo.gd" type="Script" id=1]
[ext_resource path="res://Cat - 51358.webm" type="VideoStream" id=2]
[ext_resource path="res://assets/Title Screen Buttons/Title Screen.png" type="Texture" id=3]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/Title Screen Buttons/Notebook Button-Pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/Title Screen Buttons/Guide Button-Pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/Title Screen Buttons/Notebook Button-Default.png" type="Texture" id=7]
[ext_resource path="res://assets/Title Screen Buttons/Guide Button-Hover.png" type="Texture" id=8]
[ext_resource path="res://assets/Title Screen Buttons/How To Play Button-Pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/Title Screen Buttons/Notebook Button-Hover.png" type="Texture" id=10]
[ext_resource path="res://assets/Title Screen Buttons/Play Button-Default.png" type="Texture" id=11]
[ext_resource path="res://assets/Title Screen Buttons/How To Play Button-Hover.png" type="Texture" id=12]
[ext_resource path="res://assets/Title Screen Buttons/How To Play Button-Default.png" type="Texture" id=13]
[ext_resource path="res://assets/Title Screen Buttons/Guide Button-Default.png" type="Texture" id=14]
[ext_resource path="res://assets/Title Screen Buttons/Play Button-Hover.png" type="Texture" id=15]
[ext_resource path="res://assets/Title Screen Buttons/Play Button-Pressed.png" type="Texture" id=16]
[ext_resource path="res://src/HowToPlay.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/Journal.tscn" type="PackedScene" id=18]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 368, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 736, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 1104, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 1472, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 1840, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 2208, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 2576, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 2944, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 3312, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 3680, 0, 368, 208 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 4048, 0, 368, 208 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TitleScreen" type="AnimatedSprite" parent="."]
position = Vector2( 551, 300 )
scale = Vector2( 2.99977, 2.88481 )
frames = SubResource( 13 )
frame = 2
playing = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 267.0
margin_top = 70.0
margin_right = 462.0
margin_bottom = 138.0
rect_scale = Vector2( 5, 5 )
text = "For The Gram"

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 875.0
margin_top = 225.0
margin_right = 980.0
margin_bottom = 250.0
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 95, 26 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )
stretch_mode = 3

[node name="HowToPlayButton" type="TextureButton" parent="."]
margin_left = 875.0
margin_top = 300.0
margin_right = 980.0
margin_bottom = 325.0
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 95, 26 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 12 )

[node name="HowToPlay" parent="HowToPlayButton" instance=ExtResource( 17 )]
visible = false

[node name="NotebookButton" type="TextureButton" parent="."]
margin_left = 875.0
margin_top = 375.0
margin_right = 980.0
margin_bottom = 400.0
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 95, 26 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 10 )

[node name="GuideButton" type="TextureButton" parent="."]
margin_left = 733.0
margin_top = 400.0
margin_right = 838.0
margin_bottom = 425.0
rect_scale = Vector2( 2.5, 2.5 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
visible = false
margin_left = 66.0
margin_top = 164.0
margin_right = 430.0
margin_bottom = 467.0
stream = ExtResource( 2 )
autoplay = true
script = ExtResource( 1 )

[node name="Halloween" type="Label" parent="."]
visible = false
margin_left = 191.0
margin_top = 490.0
margin_right = 306.0
margin_bottom = 504.0
text = "Happy Halloween!"

[node name="Journal" parent="." instance=ExtResource( 18 )]
visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="NotebookButton" to="." method="_on_NotebookButton_pressed"]
[connection signal="pressed" from="GuideButton" to="." method="_on_GuideButton_pressed"]
